@@ -3,7 +3,7 @@ dnl Process this file with autoconf to produce a configure script.
 dnl init
 
 AC_PREREQ(2.57)
-AC_REVISION([$NiH: configure.ac,v 1.17 2003/04/07 09:36:18 wiz Exp $])
+AC_REVISION([$NiH: configure.ac,v 1.18 2003/04/07 12:20:56 wiz Exp $])
 AC_INIT([dccserver],[0.3],[tk@giga.or.at])
 AC_CONFIG_SRCDIR([dccserver.c])
 AC_CONFIG_HEADERS([config.h])
@@ -15,19 +15,29 @@ AC_PROG_CC
 
 dnl header files
 
-AC_CHECK_HEADERS(err.h)
+AC_CHECK_HEADERS([err.h poll.h sys/poll.h])
 
 dnl libraries
+
+POLL=none
+AC_CHECK_FUNC(poll, [POLL=""])
+if test "$POLL" = none
+then
+	AC_CHECK_LIB(poll, poll, [POLL=-lpoll])
+	AC_DEFINE(USE_LIBPOLL, 1, [define if we're linking against -lpoll])
+fi
+if test "$POLL" = none
+then
+	AC_MSG_ERROR([can't find poll function; install e.g. http://www.clapper.org/software/poll/])
+fi
+LIBS="$LIBS $POLL"
 
 AC_CHECK_LIB(socket, main)
 AC_CHECK_LIB(nsl, main)
 
 dnl library functions
 
-dnl AC_REPLACE_FUNCS(getopt_long)
 AC_REPLACE_FUNCS([getaddrinfo err errx strlcpy warn warnx])
-
-dnl AC_CHECK_FUNCS([seteuid])
 
 dnl types
 
