@@ -1,4 +1,4 @@
-/* $NiH: dccserver.c,v 1.47 2003/04/15 13:06:56 wiz Exp $ */
+/* $NiH: dccserver.c,v 1.48 2003/04/15 13:11:34 wiz Exp $ */
 /*-
  * Copyright (c) 2002, 2003 Thomas Klausner.
  * All rights reserved.
@@ -44,7 +44,11 @@
 #endif /* HAVE_ERR_H */
 #include <errno.h>
 #include <fcntl.h>
+#ifdef HAVE_POLL_H
 #include <poll.h>
+#elif HAVE_SYS_POLL_H
+#include <sys/poll.h>
+#endif /* HAVE_POLL_H || HAVE_SYS_POLL_H */
 #include <signal.h>
 #include <stdarg.h>
 #include <stdio.h>
